# Deadlift-Feedback

./: .gitignore  README.md
Fitfeedback/: main.py  pyproject.toml  requirements.txt
Fitfeedback/fitfeedback/LLM_Logs/: deadlift_ankle_wide_front.mp4_A1_csv.md  deadlift_ankle_wide_front.mp4_A1_json.md  deadlift_ankle_wide_front.mp4_A1_md.md  deadlift_ankle_wide_front.mp4_A1_xlsx.md  deadlift_ankle_wide_front.mp4_A2_csv.md  deadlift_ankle_wide_front.mp4_A2_json.md  deadlift_ankle_wide_front.mp4_A2_md.md  deadlift_ankle_wide_front.mp4_A2_xlsx.md  deadlift_ankle_wide_front.mp4_A3_csv.md  deadlift_ankle_wide_front.mp4_A3_json.md  deadlift_ankle_wide_front.mp4_A3_md.md  deadlift_ankle_wide_front.mp4_A3_xlsx.md  deadlift_bar_too_far_side.mp4_A1_csv.md  deadlift_bar_too_far_side.mp4_A1_json.md  deadlift_bar_too_far_side.mp4_A1_md.md  deadlift_bar_too_far_side.mp4_A1_xlsx.md  deadlift_bar_too_far_side.mp4_A2_csv.md  deadlift_bar_too_far_side.mp4_A2_json.md  deadlift_bar_too_far_side.mp4_A2_md.md  deadlift_bar_too_far_side.mp4_A2_xlsx.md  deadlift_bar_too_far_side.mp4_A3_csv.md  deadlift_bar_too_far_side.mp4_A3_json.md  deadlift_bar_too_far_side.mp4_A3_md.md  deadlift_bar_too_far_side.mp4_A3_xlsx.md  deadlift_close_wrist_front.mp4_A1_csv.md  deadlift_close_wrist_front.mp4_A1_json.md  deadlift_close_wrist_front.mp4_A1_md.md  deadlift_close_wrist_front.mp4_A1_xlsx.md  deadlift_close_wrist_front.mp4_A2_csv.md  deadlift_close_wrist_front.mp4_A2_json.md  deadlift_close_wrist_front.mp4_A2_md.md  deadlift_close_wrist_front.mp4_A2_xlsx.md  deadlift_close_wrist_front.mp4_A3_csv.md  (+60 more)
(+46 files in other folders)
