[project]
name = "fitfeedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.130.0",
    "docling>=2.37.0",
    "lap>=0.5.12",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "ultralytics>=8.3.157",
]
