[project]
name = "fitfeedback_flow"
version = "0.1.0"
description = "fitfeedback_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
kickoff = "fitfeedback_flow.main:kickoff"
run_crew = "fitfeedback_flow.main:kickoff"
plot = "fitfeedback_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
